# AEngine

./: readme.txt
AEngine/: CMakeLists.txt
AEngine/client/: CMakeLists.txt  main.cpp
AEngine/engine/: CMakeLists.txt
AEngine/engine/render/: CMakeLists.txt  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h  window.cpp  window.h
AEngine/engine/utils/: CMakeLists.txt  filereader.cpp  filereader.h  logtool.cpp  logtool.h
AEngine/shader_source/: simple.frag  simple.vert
AEngine/test/: CMakeLists.txt  main.cpp
